force-app/main/default/objects/Krow__Expense_Rate__c/Krow__Expense_Rate__c.object-meta.xml
<CustomObject>
    <label>Expense Rate</label>
    <nameField>
        <displayFormat>ER{0000}</displayFormat>
        <label>Expense Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>