force-app/main/default/objects/Krow__Expense_Rate__c/fields/Krow__Expense_Type__c.field-meta.xml
<CustomField>
    <fullName>Krow__Expense_Type__c</fullName>
    <label>Expense Type</label>
    <referenceTo>Krow__Expense_Type__c</referenceTo>
    <relationshipLabel>Expense Rates</relationshipLabel>
    <relationshipName>Expense_Rates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>