force-app/main/default/objects/Krow__Expense_Rate__c/fields/Krow__Project__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To update the rate on expense line.</description>
    <label>Project</label>
    <referenceTo>Krow__Project__c</referenceTo>
    <relationshipLabel>Expense Rates</relationshipLabel>
    <relationshipName>Expense_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>