force-app/main/default/objects/Krow__Expense_Rate__c/fields/Krow__Rate__c.field-meta.xml
<CustomField>
    <fullName>Krow__Rate__c</fullName>
    <label>Rate</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>