force-app/main/default/objects/Krow__Expense_Rate__c/fields/Krow__Rate_Unit__c.field-meta.xml
<CustomField>
    <fullName>Krow__Rate_Unit__c</fullName>
    <label>Rate Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mile(s)</fullName>
                <default>true</default>
                <label>Mile(s)</label>
            </value>
            <value>
                <fullName>Km(s)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>